2023 Day 08 cleaned